# AI-Robitic-Course-Hackathon

./: .gitignore  QWEN.md  README.md
.claude/: settings.local.json
backend-book/: .gitignore  requirements.txt  test_e2e.py
backend-book/config/: settings.py
backend-book/scripts/: setup_qdrant.py
backend-book/src/: main.py
frontend-book/: docusaurus.config.ts
frontend-book/docs/: ai-chatbot-widget.md
frontend-book/static/: rag-agent.css
my-website/: docusaurus.config.ts  package-lock.json
rag-pipeline/: .gitignore  README.md  config.yaml  main.py  pyproject.toml  qdrant_data.json  requirements-dev.txt  requirements.txt
rag-pipeline/data/: embeddings.jsonl
rag-pipeline/scripts/: setup_qdrant.py  validate_crawl.py  validate_embed.py  validate_embeddings.py
rag-pipeline/src/: __init__.py  config.py
rag-pipeline/src/agents/: rag_agent.py
rag-pipeline/src/api/: main.py
rag-pipeline/src/cli/: __init__.py  crawl.py  embed.py  pipeline.py  upload.py
rag-pipeline/src/models/: __init__.py  chunk.py  document.py  embedding.py
rag-pipeline/src/services/: __init__.py  chunker.py  crawler.py  embedder.py  embedding_factory.py  embedding_service.py  extractor.py  qdrant_service.py  state_manager.py  vector_store.py
rag-pipeline/src/ui/: app.py
rag-pipeline/src/utils/: __init__.py  logger.py  retry.py  validators.py
rag-pipeline/src/widget/: widget.js
specs/001-book-rag-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-book-translation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+76 files in other folders)
