[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-pipeline"
version = "0.1.0"
description = "RAG ingestion pipeline for Docusaurus documentation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI Robotic Course Hackathon"}
]
dependencies = [
    "aiohttp==3.9.1",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "cohere==4.37",
    "qdrant-client==1.7.0",
    "langchain-text-splitters==0.0.1",
    "tiktoken==0.5.2",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "structlog==23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
]

[project.scripts]
rag-crawl = "src.cli.crawl:main"
rag-embed = "src.cli.embed:main"
rag-upload = "src.cli.upload:main"
rag-pipeline = "src.cli.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
